fixed spacings on journey cards

--- a/app/assets/stylesheets/components/cards/_local_journey_card.scss
+++ b/app/assets/stylesheets/components/cards/_local_journey_card.scss
@@ -8,9 +8,14 @@
   align-items: center;
   margin-top: 12px;
   position: relative;
+
   ul {
     list-style: none;
-    margin-bottom: 25px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .journey-btns {
 
   }
 }
